add eames photos

--- a/index.html
+++ b/index.html
@@ -140,26 +140,26 @@
             "adaptiveHeight": false
         }'> 
             <figure class="carousel-cell">
-                <img src="images/carousel-image1.jpg" alt="Furniture Slide 1" style="width: 100%; object-fit: cover;">
-            </figure> 
-            <figure class="carousel-cell">
-                <img src="images/carousel-image2.jpg " alt="Furniture Slide 2" style="width: 100%; object-fit: cover;">
-            </figure> 
-            <figure class="carousel-cell">
-                <img src="images/carousel-image3.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
+                <img src="images/yelloweamsside.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
             </figure>
             <figure class="carousel-cell">
-                <img src="images/carousel-image4.jpg" alt="Furniture Slide 4" style="width: 100%; object-fit: cover;">
+                <img src="images/greeneamesfront.jpg" alt="Furniture Slide 1" style="width: 100%; object-fit: cover;">
+            </figure>  
+            <figure class="carousel-cell">
+                <img src="images\browneamesside.JPG" alt="Furniture Slide 4" style="width: 100%; object-fit: cover;">
             </figure>
             <figure class="carousel-cell">
-                <img src="images/carousel-image5.jpg" alt="Furniture Slide 5" style="width: 100%; object-fit: cover;">
+                <img src="images\blackeamesfront.JPG" alt="Furniture Slide 5" style="width: 100%; object-fit: cover;">
             </figure>
             <figure class="carousel-cell">
-                <img src="images/carousel-image6.jpg" alt="Furniture Slide 6" style="width: 100%; object-fit: cover;">
+                <img src="images\blackchairside.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover;">
+            </figure>
+            <figure class="carousel-cell">
+                <img src="images\twochairs.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover; height: 275.35px">
             </figure>
         </section>
         <section class = "recent-additions">
-            <h2 class = "section-title">GALLERY</h2>
+            <h2 class = "section-title">ARCHIVE</h2>
             <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "contain": true, "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true}'>
                 <figure class = "recent-additions-image">
                     <img src="images/recentaddition-image.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
