add stopPropogation() when clicking flickity buttons so menu stays closed

--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
                     searchBar = false;
                 }
             });
+
+                        // Add this: Stop propagation on Flickity buttons
+            $('.flickity-prev-next-button').on('click', function(e) {
+                e.stopPropagation();  // Stop event from bubbling up
+            });
         });
     </script>
 
