fix unintentional scroll on carousels and allow vertical scrolling without triggoring carousels

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             "prevNextButtons": true,
             "pageDots": false,
             "draggable": true,
-            "adaptiveHeight": false
+            "adaptiveHeight": false,
+            "touchVerticalScroll": true, 
+            "dragThreshold": 10
         }'> 
             <figure class="carousel-cell">
                 <img src="images/yelloweamsside.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
@@ -160,7 +162,7 @@
         </section>
         <section class = "recent-additions">
             <h2 class = "section-title">ARCHIVE</h2>
-            <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "contain": true, "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true}'>
+            <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "contain": true, "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 10}'>
                 <figure class = "recent-additions-image">
                     <img src="images/recentaddition-image.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
                     <figcaption>First recent addition image on the website</figcaption>
