add category photos

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             "draggable": true,
             "adaptiveHeight": false,
             "touchVerticalScroll": true, 
-            "dragThreshold": 10
+            "dragThreshold": 30
         }'> 
             <figure class="carousel-cell">
                 <img src="images/yelloweamsside.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
@@ -161,8 +161,8 @@
             </figure>
         </section>
         <section class = "recent-additions">
-            <h2 class = "section-title">ARCHIVE</h2>
-            <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "contain": true, "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 10}'>
+            <h2 class = "section-title archive-heading">ARCHIVE</h2>
+            <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "contain": true, "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 30}'>
                 <figure class = "recent-additions-image">
                     <img src="images/recentaddition-image.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
                     <figcaption>First recent addition image on the website</figcaption>
@@ -182,6 +182,42 @@
                 <figure class = "recent-additions-image">
                     <img src="images/recentaddition-image5.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
                     <figcaption>Fifth recent addition image on the website</figcaption>
+                </figure>
+            </article>
+        </section>
+        <section class = "categories">
+            <h2 class = "section-title categories-heading">CATEGORIES</h2>
+            <article>
+                <figure class = "categories-image">
+                    <img src="images/accessories.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>ACCESSORIES</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/beds.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>BEDS</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/seating.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>SEATING</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/lighting.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>LIGHTING</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/mirrors.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>MIRRORS</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/storage.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>STORAGE</figcaption>
+                </figure>
+                <figure class = "categories-image">
+                    <img src="images/tables.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>TABLES</figcaption>
+                </figure>
+                    <img src="images/tabletop.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <figcaption>TABLETOP</figcaption>
                 </figure>
             </article>
         </section>
