add 5 milisecond autoplay to upper carousel

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
             "draggable": true,
             "adaptiveHeight": false,
             "touchVerticalScroll": true, 
-            "dragThreshold": 30
+            "dragThreshold": 30,
+            "autoPlay": 5000
         }'> 
             <figure class="carousel-cell">
                 <img src="images/yelloweamsside.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
