--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>WYETH | Mid-Centry Modern Furniture & Home Decor</title>
     <!-- Load jQuery first -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -127,9 +127,9 @@
             <figure class="carousel-cell">
                 <img src="images\blackchairside.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover;">
             </figure>
-            <figure class="carousel-cell">
+            <!-- <figure class="carousel-cell">
                 <img src="images\twochairs.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover; height: 255.35px">
-            </figure>
+            </figure> -->
         </section>
         <section class = "recent-additions">
             <h2 class = "section-title archive-heading">ARCHIVE</h2>
@@ -194,13 +194,13 @@
             </article>
         </section>
         
-        <section id="about">
+        <!-- <section id="about">
             <h2>About Us</h2>
             <p>Information about the company.</p>
-        </section>
+        </section> -->
     </main>
     <footer>
-        <p> &copy; 2024 Your Business Name</p>
+        <p> &copy; 2024 Postwar Studio</p>
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
