--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>WYETH | Mid-Centry Modern Furniture & Home Decor</title>
+    <title>Postwar Studio | Mid-Centry Modern Furniture & Home Decor</title>
     <!-- Load jQuery first -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
