change label of menu item

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav class="dropdown-menu">
             <ul class="dropdown-menu-ul">
                 <li><a href="#products">PRODUCTS</a></li>
-                <li><a href="#wyeth-originals">WYETH ORIGINALS</a></li>
+                <li><a href="#postwar-originals">POSTWAR ORIGINALS</a></li>
                 <li><a href="#showroom">SHOWROOM</a></li>
                 <li><a href="#rent">RENT</a></li>
                 <li><a href="#login">LOGIN</a></li>
