remove redundant width in archive img inline style

--- a/index.html
+++ b/index.html
@@ -135,23 +135,35 @@
             <h2 class = "section-title archive-heading">ARCHIVE</h2>
             <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 30}'>
                 <figure class = "recent-additions-image">
-                    <img src="images/recentaddition-image.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <img src="images/cigar1.jpg" alt="Recent Additions Image" style="object-fit: cover;">
                     <figcaption>First recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/recentaddition-image2.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
-                    <figcaption>Second recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/recentaddition-image3.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <img src="images/cigar3.jpg" alt="Recent Additions Image" style="object-fit: cover;">
                     <figcaption>Third recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/recentaddition-image4.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <img src="images/cigar4.jpg" alt="Recent Additions Image" style="object-fit: cover;">
                     <figcaption>Fourth recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/recentaddition-image5.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <img src="images/cigar6.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <figcaption>First recent addition image on the website</figcaption>
+                </figure>
+                <figure class = "recent-additions-image">
+                    <img src="images/cigar8.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <figcaption>Third recent addition image on the website</figcaption>
+                </figure>
+                <figure class = "recent-additions-image">
+                    <img src="images/cigar9.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <figcaption>Fourth recent addition image on the website</figcaption>
+                </figure>
+                <figure class = "recent-additions-image">
+                    <img src="images/cigar10.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <figcaption>Fifth recent addition image on the website</figcaption>
+                </figure>
+                <figure class = "recent-additions-image">
+                    <img src="images/cigar11.jpg" alt="Recent Additions Image" style="object-fit: cover;">
                     <figcaption>Fifth recent addition image on the website</figcaption>
                 </figure>
             </article>
