remove unused classes and, add seating category photo, and add grasshopper chaise to archive

--- a/index.html
+++ b/index.html
@@ -124,52 +124,46 @@
             <figure class="carousel-cell">
                 <img src="images\blackeamesfront.JPG" alt="Furniture Slide 5" style="width: 100%; object-fit: cover;">
             </figure>
-            <figure class="carousel-cell">
-                <img src="images\blackchairside.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover;">
-            </figure>
-            <!-- <figure class="carousel-cell">
-                <img src="images\twochairs.JPG" alt="Furniture Slide 6" style="width: 100%; object-fit: cover; height: 255.35px">
-            </figure> -->
         </section>
         <section class = "recent-additions">
-            <h2 class = "section-title archive-heading">ARCHIVE</h2>
+            <h2 class = "section-title">ARCHIVE</h2>
             <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 30}'>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar1.jpg" alt="Recent Additions Image" style="object-fit: cover;">
-                    <figcaption>First recent addition image on the website</figcaption>
+                    <img src="images/blackchairside.JPG" alt="Recent Additions Image" style = "object-fit: cover;">
+                    <figcaption>Preben Fabricius and Jorgen Kastholm FK87 grasshopper chaise - Alfred Kill, 1960<span class = "no-uppercase">s</span></figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar3.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar3.jpg" alt="Recent Additions Image"">
                     <figcaption>Third recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar4.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar4.jpg" alt="Recent Additions Image">
                     <figcaption>Fourth recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar6.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar6.jpg" alt="Recent Additions Image">
                     <figcaption>First recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar8.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar8.jpg" alt="Recent Additions Image">
                     <figcaption>Third recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar9.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar9.jpg" alt="Recent Additions Image">
                     <figcaption>Fourth recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar10.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar10.jpg" alt="Recent Additions Image">
                     <figcaption>Fifth recent addition image on the website</figcaption>
                 </figure>
                 <figure class = "recent-additions-image">
-                    <img src="images/cigar11.jpg" alt="Recent Additions Image" style="object-fit: cover;">
+                    <img src="images/cigar11.jpg" alt="Recent Additions Image">
                     <figcaption>Fifth recent addition image on the website</figcaption>
                 </figure>
             </article>
         </section>
         <section class = "categories">
-            <h2 class = "section-title categories-heading">CATEGORIES</h2>
+            <h2 class = "section-title">CATEGORIES</h2>
             <article>
                 <figure class = "categories-image">
                     <img src="images/accessories.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
@@ -180,7 +174,7 @@
                     <figcaption>BEDS</figcaption>
                 </figure>
                 <figure class = "categories-image">
-                    <img src="images/seating.jpg" alt="Recent Additions Image" style="width: 100%; object-fit: cover;">
+                    <img src="images/cigar5.jpg" alt="Recent Additions Image" style="width: 90%; object-fit: cover;">
                     <figcaption>SEATING</figcaption>
                 </figure>
                 <figure class = "categories-image">
