change recent-additions to archive, remove unneeded elements

--- a/index.html
+++ b/index.html
@@ -125,40 +125,12 @@
                 <img src="images\blackeamesfront.JPG" alt="Furniture Slide 5" style="width: 100%; object-fit: cover;">
             </figure>
         </section>
-        <section class = "recent-additions">
+        <section class = "archive">
             <h2 class = "section-title">ARCHIVE</h2>
-            <article class = "recent-additions-carousel" data-flickity='{"cellAlign": "center", "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 30}'>
-                <figure class = "recent-additions-image">
-                    <img src="images/blackchairside.JPG" alt="Recent Additions Image" style = "object-fit: cover;">
+            <article class = "archive-carousel" data-flickity='{"cellAlign": "center", "wrapAround": true, "prevNextButtons": true, "pageDots": false, "draggable": true, "freeScroll": true, "touchVerticalScroll": true, "dragThreshold": 30}'>
+                <figure class = "archive-image">
+                    <img src="images/blackchairside.JPG" alt="Archive Image of black chaise" style = "object-fit: cover;">
                     <figcaption>Preben Fabricius and Jorgen Kastholm FK87 grasshopper chaise - Alfred Kill, 1960<span class = "no-uppercase">s</span></figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar3.jpg" alt="Recent Additions Image"">
-                    <figcaption>Third recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar4.jpg" alt="Recent Additions Image">
-                    <figcaption>Fourth recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar6.jpg" alt="Recent Additions Image">
-                    <figcaption>First recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar8.jpg" alt="Recent Additions Image">
-                    <figcaption>Third recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar9.jpg" alt="Recent Additions Image">
-                    <figcaption>Fourth recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar10.jpg" alt="Recent Additions Image">
-                    <figcaption>Fifth recent addition image on the website</figcaption>
-                </figure>
-                <figure class = "recent-additions-image">
-                    <img src="images/cigar11.jpg" alt="Recent Additions Image">
-                    <figcaption>Fifth recent addition image on the website</figcaption>
                 </figure>
             </article>
         </section>
