remove padding from footer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Postwar Studio | Mid-Centry Modern Furniture & Home Decor</title>
     <!-- Load jQuery first -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
     <!-- Load all CSS first -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.3.0/flickity.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/3.0.0/flickity.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Then load fonts -->
@@ -47,11 +47,14 @@
                 <li><a href="#postwar-originals">POSTWAR ORIGINALS</a></li>
                 <li><a href="#showroom">SHOWROOM</a></li>
                 <li><a href="#rent">RENT</a></li>
-                <li><a href="#login">LOGIN</a></li>
+                <!-- <li><a href="#login">LOGIN</a></li> -->
             </ul>
         </nav>
 
-            <img src="images/postwarlogo.png" alt="Wyeth Logo" class = "wyeth-logo" style="width: 100px; height: 50px;">
+            <img src="images/postwarlogo.png" alt="Postwar Studio Logo" title="Postwar Studio" class = "postwar-logo-max-width-911">
+
+            <img src="images/postwarlogo.png" alt="Postwar Studio Logo" title="Postwar Studio" class = "postwar-logo-min-width-912">
+
  
          
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="25" height="25" class="icon-search" shape-rendering="geometricPrecision">
@@ -113,16 +116,16 @@
             "autoPlay": 5000
         }'> 
             <figure class="carousel-cell">
-                <img src="images/yelloweamsside.jpg" alt="Furniture Slide 3" style="width: 100%; object-fit: cover;">
+                <img src="images/yelloweamsside.jpg" alt="Yellow Eames Chair" style="width: 100%; object-fit: cover;">
             </figure>
             <figure class="carousel-cell">
-                <img src="images/greeneamesfront.jpg" alt="Furniture Slide 1" style="width: 100%; object-fit: cover;">
+                <img src="images/greeneamesfront.jpg" alt="Green Eames Chair" style="width: 100%; object-fit: cover;">
             </figure>  
             <figure class="carousel-cell">
-                <img src="images\browneamesside.JPG" alt="Furniture Slide 4" style="width: 100%; object-fit: cover;">
+                <img src="images\browneamesside.JPG" alt="Brown Eames Chair" style="width: 100%; object-fit: cover;">
             </figure>
             <figure class="carousel-cell">
-                <img src="images\blackeamesfront.JPG" alt="Furniture Slide 5" style="width: 100%; object-fit: cover;">
+                <img src="images\blackeamesfront.JPG" alt="Black Eames Chair" style="width: 100%; object-fit: cover;">
             </figure>
         </section>
         <section class = "archive">
